syntax = "proto3";
package com.example.internalapi.model;

option java_package = "com.example.internalapi.model";
option java_multiple_files = true;

message UserInput {
  optional string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string password = 5;
  string phone_number = 6;
}

message UserOutput {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone_number = 5;
}

message UserList {
  repeated UserOutput users = 1;
}
