syntax = "proto3";

package com.example.internalapi;

import "com/example/internalapi/input/reqreply/user/create.proto";
import "com/example/internalapi/input/reqreply/user/get_all.proto";
import "com/example/internalapi/input/reqreply/user/get_by_id.proto";
import "com/example/internalapi/input/reqreply/user/update.proto";

service UserService {
  rpc createUser(com.example.internalapi.request.user.create.proto.CreateUserRequest)
      returns (com.example.internalapi.request.user.create.proto.CreateUserResponse);

  rpc getAllUsers(com.example.internalapi.request.user.get_all.proto.GetAllUsersRequest)
      returns (com.example.internalapi.request.user.get_all.proto.GetAllUsersResponse);

  rpc getUserById(com.example.internalapi.request.user.get_by_id.proto.GetUserByIdRequest)
      returns (com.example.internalapi.request.user.get_by_id.proto.GetUserByIdResponse);

  rpc updateUser(com.example.internalapi.request.user.update.proto.UpdateUserRequest)
      returns (com.example.internalapi.request.user.update.proto.UpdateUserResponse);
}
